Template URL Support added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body ng-app="angularSideNavModule" ng-controller='myCtrl'>
 	<h1>Hello {{data}}</h1>
 	<button id="angular-side-nav-open"> Open </button>
-	<angular-side-nav-raoit></angular-side-nav-raoit>
+	<angular-side-nav-raoit template-url=""></angular-side-nav-raoit>
 
 </body>
 </html>
