--- a/side-nav-template.html
+++ b/side-nav-template.html
@@ -3,9 +3,8 @@
 
 
 	<ul>
-		<li style="text-align:center; background-color:LightBlue">
-			<img src="logo.png" style="width:200px; height:auto">
-
+		<li style="text-align:center; background-color:WhiteSmoke; border:solid; border-color: LightGrey">
+			<img src="raoInfotechLogo.png" style="width:200px; height:auto;">
 		</li>
 		<li>Item </li>
 		<li>Item </li>
@@ -39,6 +38,4 @@
 		<li>Item </li>
 	
 	</ul>
-<!-- 	<div id="emptySpaceSideNav">
-	</div> -->
 </div>
