--- a/side-nav-template.html
+++ b/side-nav-template.html
@@ -4,7 +4,7 @@
 
 	<ul>
 		<li style="text-align:center; background-color:WhiteSmoke; border:solid; border-color: LightGrey">
-			<img src="raoInfotechLogo.png" style="width:200px; height:auto;">
+			<img src="raoinfotechLogo.png" style="width:200px; height:auto;">
 		</li>
 		<li>Item </li>
 		<li>Item </li>
